website/code/message-scala-2.log
BUILD COMMANDS FOR: message.scala-2.scala

Thu Apr  5 21:22:50 PDT 2007

( if [ ! -d message.scala-2.scala_run ] ; then mkdir message.scala-2.scala_run ; fi)
cp /opt/shootout/shootout/bench/message/message.scala-2.scala message.scala-2.scala_run/message.scala
( cd message.scala-2.scala_run ; /usr/bin/scalac -target:jvm-1.5 -Xcloselim message.scala )
message.scala:6: error: value actors is not a member of package scala
import scala.actors._; import scala.actors.Actor._
            ^
one error found
make[3]: [message.scala-2.scala_run] Error 1 (ignored)
touch message.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/usr/lib/j2se/1.5/bin/java -server" /usr/bin/scala -classpath message.scala-2.scala_run message %A
************************************************************
*   TEST (message.scala-2.scala_run) FAILED - ERROR:  message.scala-2.scala_out differs from Output.1000
************************************************************
-rw-r--r-- 1 brent brent 22 2007-04-05 21:22 message.scala-2.scala_out
-rw-r--r-- 1 brent brent  7 2007-01-10 02:06 Output.1000


PROGRAM OUTPUT
==============
no such file: message
